--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.jspringbot</groupId>
+      <artifactId>jspringbot</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
@@ -131,11 +136,6 @@
       <artifactId>mockito-all</artifactId>
       <version>1.9.0</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.robotframework</groupId>
-      <artifactId>robotframework</artifactId>
-      <version>2.7.5</version>
     </dependency>
   </dependencies>
 </project>
