--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
   <properties>
     <mavenVersion>2.0.6</mavenVersion>
     <mavenPluginPluginVersion>3.1</mavenPluginPluginVersion>
+    <jspringbot.version>1.0</jspringbot.version>
   </properties>
 
   <build>
@@ -130,7 +131,7 @@
     <dependency>
       <groupId>org.jspringbot</groupId>
       <artifactId>jspringbot</artifactId>
-      <version>${project.version}</version>
+      <version>${jspringbot.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
