--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
   <properties>
     <mavenVersion>2.0.6</mavenVersion>
     <mavenPluginPluginVersion>3.1</mavenPluginPluginVersion>
-    <jspringbot.version>1.0</jspringbot.version>
+    <jspringbot.version>1.1-SNAPSHOT</jspringbot.version>
   </properties>
 
   <build>
