--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.jspringbot</groupId>
   <artifactId>jspringbot-maven-plugin</artifactId>
-  <version>1.4-SNAPSHOT</version>
+  <version>1.4</version>
 
   <packaging>maven-plugin</packaging>
   <name>jspringbot-maven-plugin</name>
